tools/bin/dxeffect.output
Grammar

    0 $accept: calclist $end

    1 calclist: /* empty */
    2         | calclist exp EOL

    3 exp: factor
    4    | exp ADD factor
    5    | exp SUB factor

    6 factor: term
    7       | factor MUL term
    8       | factor DIV term

    9 term: NUMBER
   10     | ABS term


Terminals, with rules where they appear

$end (0) 0
error (256)
NUMBER (258) 9
ADD (259) 4
SUB (260) 5
MUL (261) 7
DIV (262) 8
ABS (263) 10
EOL (264) 2


Nonterminals, with rules where they appear

$accept (10)
    on left: 0
calclist (11)
    on left: 1 2, on right: 0 2
exp (12)
    on left: 3 4 5, on right: 2 4 5
factor (13)
    on left: 6 7 8, on right: 3 4 5 7 8
term (14)
    on left: 9 10, on right: 6 7 8 10


state 0

    0 $accept: . calclist $end

    $default  reduce using rule 1 (calclist)

    calclist  go to state 1


state 1

    0 $accept: calclist . $end
    2 calclist: calclist . exp EOL

    $end    shift, and go to state 2
    NUMBER  shift, and go to state 3
    ABS     shift, and go to state 4

    exp     go to state 5
    factor  go to state 6
    term    go to state 7


state 2

    0 $accept: calclist $end .

    $default  accept


state 3

    9 term: NUMBER .

    $default  reduce using rule 9 (term)


state 4

   10 term: ABS . term

    NUMBER  shift, and go to state 3
    ABS     shift, and go to state 4

    term  go to state 8


state 5

    2 calclist: calclist exp . EOL
    4 exp: exp . ADD factor
    5    | exp . SUB factor

    ADD  shift, and go to state 9
    SUB  shift, and go to state 10
    EOL  shift, and go to state 11


state 6

    3 exp: factor .
    7 factor: factor . MUL term
    8       | factor . DIV term

    MUL  shift, and go to state 12
    DIV  shift, and go to state 13

    $default  reduce using rule 3 (exp)


state 7

    6 factor: term .

    $default  reduce using rule 6 (factor)


state 8

   10 term: ABS term .

    $default  reduce using rule 10 (term)


state 9

    4 exp: exp ADD . factor

    NUMBER  shift, and go to state 3
    ABS     shift, and go to state 4

    factor  go to state 14
    term    go to state 7


state 10

    5 exp: exp SUB . factor

    NUMBER  shift, and go to state 3
    ABS     shift, and go to state 4

    factor  go to state 15
    term    go to state 7


state 11

    2 calclist: calclist exp EOL .

    $default  reduce using rule 2 (calclist)


state 12

    7 factor: factor MUL . term

    NUMBER  shift, and go to state 3
    ABS     shift, and go to state 4

    term  go to state 16


state 13

    8 factor: factor DIV . term

    NUMBER  shift, and go to state 3
    ABS     shift, and go to state 4

    term  go to state 17


state 14

    4 exp: exp ADD factor .
    7 factor: factor . MUL term
    8       | factor . DIV term

    MUL  shift, and go to state 12
    DIV  shift, and go to state 13

    $default  reduce using rule 4 (exp)


state 15

    5 exp: exp SUB factor .
    7 factor: factor . MUL term
    8       | factor . DIV term

    MUL  shift, and go to state 12
    DIV  shift, and go to state 13

    $default  reduce using rule 5 (exp)


state 16

    7 factor: factor MUL term .

    $default  reduce using rule 7 (factor)


state 17

    8 factor: factor DIV term .

    $default  reduce using rule 8 (factor)
